--- a/src/main/webapp/WEB-INF/template/footer.jspf
+++ b/src/main/webapp/WEB-INF/template/footer.jspf
@@ -1,3 +1,3 @@
 <footer>
-	<p>&copy; 2016 Instituto Tecnol&oacute;gico Superior de Alvarado Veracruz</p>
+	<p>&copy; 2016 Instituto Tecnol&oacute;gico Superior de Alvarado.</p>
 </footer>
